# sentinel

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  TODO.md  flake.nix  justfile  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: release-container.yml
.zed/: tasks.json
src/: tasks.py
src/sentinel/: __init__.py  cli.py  env.py  health.py  logs.py  process.py  restart_monitor.py  state.py
src/sentinel/cli/: __init__.py  daemon.py  group.py  main.py  port.py
src/sentinel_cli/: __init__.py  daemon.py  group.py  main.py  port.py  startup.py
src/sentinel_core/: __init__.py  env.py  logs.py  process.py  restart_monitor.py
src/tasks/: check.py  coverage.py  uv.py
tests/: __init__.py  conftest.py  test_batch_operations.py  test_cli_daemon.py  test_cli_group.py  test_cli_main.py  test_cli_port.py  test_env.py  test_health.py  test_logs.py  test_process.py  test_restart_monitor.py  test_state.py  test_state_groups.py
tests/cli/: test_cli_daemon.py  test_cli_group.py  test_cli_main.py  test_cli_port.py  test_cli_startup_scripts.py
tests/core/: test_batch_operations.py  test_env.py  test_health.py  test_logs.py  test_process.py  test_restart_monitor.py  test_state.py  test_state_groups.py
