[project]
name = "sentinel"
version = "0.1.1"
description = "A simple process supervisor CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["psutil>=7.1.3", "rich>=14.2.0", "typer>=0.20.1"]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.15.1", "ty>=0.0.17"]

[project.scripts]
sentinel = "sentinel.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
	"--strict-markers",          # Ensure all markers are registered
	"--strict-config",           # Ensure all config options are valid
	"-ra",                       # Show extra test summary info for skipped, failed, etc.
	"--cov-fail-under=80",       # Minimum coverage percentage
	"--cov=sentinel",            # Measure coverage for the 'sentinel' package
	"--cov-report=term-missing", # Show missing lines in terminal report
	"--cov-report=html",         # Generate HTML report for human reading (view in browser)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
