[project]
name = "sentinel"
version = "0.1.5"
description = "A simple process supervisor CLI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = ["psutil>=7.1.3", "rich>=14.2.0", "typer>=0.20.1"]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.14",
	"Environment :: Console",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.15.4", "ty>=0.0.20"]

[project.scripts]
sentinel = "sentinel_cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
	"--strict-markers",          # Ensure all markers are registered
	"--strict-config",           # Ensure all config options are valid
	"-ra",                       # Show extra test summary info for skipped, failed, etc.
	"--cov-fail-under=80",       # Minimum coverage percentage
	"--cov=sentinel_core",       # Measure coverage for shared domain logic
	"--cov=sentinel_cli",        # Measure coverage for CLI logic
	"--cov-report=term-missing", # Show missing lines in terminal report
	"--cov-report=html",         # Generate HTML report for human reading (view in browser)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel", "src/sentinel_core", "src/sentinel_cli"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
