[project]
name = "sentinel"
version = "0.2.1+fix"
description = "A lightweight process orchestrator CLI"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["process", "orchestrator", "CLI", "monitoring", "system administration", "development"]
requires-python = ">=3.14"
authors = [{ name = "4ster", email = "me@4ster.dev" }]
dependencies = ["psutil>=7.1.3", "rich>=14.2.0", "typer>=0.20.1"]
classifiers = [
	"Development Status :: 4 - Beta",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.14",
	"Environment :: Console",
	"Operating System :: POSIX",
	"Operating System :: POSIX :: Linux",
	"Operating System :: MacOS",
	"Topic :: System :: Systems Administration",
	"Topic :: Utilities",
	"Intended Audience :: Developers",
	"Intended Audience :: System Administrators",
]

[project.urls]
Homepage = "https://sentinel.4ster.deno.net"
Repository = "https://github.com/4ster-light/sentinel"
"Bug Tracker" = "https://github.com/4ster-light/sentinel/issues"
Changelog = "https://github.com/4ster-light/sentinel/releases"

[project.scripts]
sentinel = "sentinel_cli:app"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.15.20", "ty>=0.0.54"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
	"--strict-markers",          # Ensure all markers are registered
	"--strict-config",           # Ensure all config options are valid
	"-ra",                       # Show extra test summary info for skipped, failed, etc.
	"--cov-fail-under=80",       # Minimum coverage percentage
	"--cov=sentinel_core",       # Measure coverage for shared domain logic
	"--cov=sentinel_cli",        # Measure coverage for CLI logic
	"--cov-report=term-missing", # Show missing lines in terminal report
	"--cov-report=html",         # Generate HTML report for human reading (view in browser)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_core", "src/sentinel_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
